should stop pushing to stack b when stack a is sorted

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
 	"files.associations": {},
 	"files.exclude": {
 		"**/*.o": true,
-		"**/*.a": true
+		"**/*.a": true,
 		".vscode": true
-	}
+	},
+    "editor.rulers": [80]
 }
